# clox

./: .dockerignore  .gitignore  CMakeLists.txt  DEVELOPMENT.md  Dockerfile  README.md  justfile  tests.sh
.github/workflows/: ci.yml
docs/: CLI.md  DEVELOPMENT.md  EXTENDING_LOX.md  GOALSV1.md  OPCODES.md
examples/: README.md  cat.lox  fib.lox  fizzbuzz.lox  hello.lox  prompt.lox  stdin.lox  writeFile.lox  zoo.lox
scripts/: README.md  build-tests.sh  build-vsc.sh  build.sh  clean.sh  cmake.sh  coverage.sh  generate_version_c.sh  generate_version_header.sh  increment-version.sh  install-macos.sh  install-windows.cmd  open-vsc.sh  run-example.sh  tests.sh  unit.sh
src/: assert.c  assert.h  chunk.c  chunk.h  common.h  compiler.c  compiler.h  debug.c  hashtable.c  hashtable.h  main.c  memory.c  memory.h  native.c  native.h  object.c  object.h  scanner.c  scanner.h  token.c  token.h  value.c  value.h  version.h  vm.c  vm.h
stdlib/: stdlib.lox
tests/: README.md  add.lox.err  add.lox.out  array.lox.err  array_gc.lox  array_gc.lox.err  array_index_get.lox.err  array_index_get_non_number_index.lox  array_index_get_non_number_index.lox.err  array_index_get_out_of_bounds.lox  array_index_get_out_of_bounds.lox.err  array_index_set.lox.err  array_multidimensional.lox.err  assignment.lox.err  assignment.lox.out  assignment_edge_case.lox.err  assignment_shadow_global.lox.err  assignment_shadow_local.lox  assignment_shadow_local.lox.err  block_assignment.lox  block_assignment.lox.err  block_assignment.lox.out  block_assignment_edge_case.lox.err  block_statement_empty.lox.err  bool_and_false_true.lox  bool_and_false_true.lox.err  bool_and_true_false.lox.err  bool_and_true_true.lox  bool_and_true_true.lox.err  bool_equals.lox.err  bool_equals.out.expected  bool_false.lox.err  bool_false.lox.out  bool_false_negate.lox.err  bool_or.lox  bool_or.lox.err  bool_true.lox.err  bool_true.lox.out  bool_true_negate.lox.err  call_uncallable.lox  (+345 more)
tests/arrays/: array.lox.err  array_empty.lox.err  array_gc.lox.err  array_index_get.lox  array_index_get.lox.err  array_index_get_non_number_index.lox.err  array_index_get_out_of_bounds.lox.err  array_index_set.lox  array_index_set.lox.err  array_multidimensional.lox  array_multidimensional.lox.err  array_multidimensional.lox.out
tests/assignments/: assignment.lox  assignment.lox.err  assignment_edge_case.lox  assignment_edge_case.lox.err  assignment_shadow_global.lox  assignment_shadow_global.lox.err  assignment_shadow_local.lox.err  block_assignment.lox.err  block_assignment_edge_case.lox.err
tests/classes/: class.lox.err  class_field_access_invoke.lox.err  class_field_declaration_default_value.lox  class_field_declaration_default_value.lox.err  class_field_duplicate.lox  class_field_duplicate.lox.err  class_field_set_undefined_field.lox  class_field_set_undefined_field.lox.err  class_field_too_many.lox  class_field_too_many.lox.err  class_init.lox.err  class_init_not_defined_but_passed_args.lox.err  class_init_return_this.lox  class_init_return_this.lox.err  class_instance.lox  class_instance.lox.err  class_instance_property.lox.err  class_instance_property_doesnt_exist.lox.err  class_method.lox  class_method.lox.err  class_method.lox.out  class_method_bound.lox.err  class_method_call.lox.err  class_method_doesnt_exist.lox.err  class_method_typeof.lox  class_method_typeof.lox.err  class_methods.lox.err  class_this.lox.err  class_this_outside_class_function.lox.err  class_this_outside_class_top_level.lox.err  class_this_set_property.lox  class_this_set_property.lox.err
tests/closures/: closure.lox  closure.lox.err  upvalue.lox.err  upvalue_closed.lox.err  upvalue_global.lox.err  upvalue_linked.lox.err
tests/errors/: call_non_callable.lox.err  call_uncallable.lox.err  compiler_error_missing_semicolon.lox.err  compiler_error_unterminated_string.lox.err  return_in_top_level.lox.err  runtime_error_binary_op_type_mismatch.lox  runtime_error_binary_op_type_mismatch.lox.err
tests/flow_control/: for.lox.err  if_and_then.lox  if_and_then.lox.err  if_and_then_false.lox  if_and_then_false.lox.err  if_else.lox  if_else.lox.err  if_else_false.lox  if_else_false.lox.err  if_then.lox  if_then.lox.err  if_then_false.lox  if_then_false.lox.err  while.lox  while.lox.err  while_false.lox.err
tests/functions/: function.lox  function.lox.err  function_body_expressions.lox  function_body_expressions.lox.err  function_call.lox  function_call.lox.err  function_call_too_many_args.lox  function_call_too_many_args.lox.err  function_implicit_return.lox  function_implicit_return.lox.err  function_implicit_return_not_the_last_line.lox  function_implicit_return_not_the_last_line.lox.err  function_return_semicolon.lox  function_return_semicolon.lox.err  function_return_semicolon.lox.out  function_test.lox.err  function_typeof.lox.err
tests/native_functions/: native_fn_argc_and_argv.lox.err  native_fn_argc_and_argv.lox.out  native_fn_argc_and_argv_too_many_args.lox.err  native_fn_argc_call_too_many_args.lox.err  native_fn_argv_call_arg1_type_mismatch.lox.err  native_fn_argv_call_too_many_args.lox.err  native_fn_arr_clear_call.lox  native_fn_arr_clear_call.lox.err  native_fn_arr_clear_call.lox.out  native_fn_arr_clear_call_arg0_wrong_type.lox  native_fn_arr_clear_call_arg0_wrong_type.lox.err  native_fn_arr_clear_call_no_args.lox.err  native_fn_arr_clear_call_too_many_args.lox  native_fn_arr_clear_call_too_many_args.lox.err  native_fn_arr_concat_call.lox  native_fn_arr_concat_call.lox.err  native_fn_arr_concat_call.lox.out  native_fn_arr_concat_call_arg0_wrong_type.lox  native_fn_arr_concat_call_arg0_wrong_type.lox.err  native_fn_arr_concat_call_arg1_wrong_type.lox  native_fn_arr_concat_call_arg1_wrong_type.lox.err  native_fn_arr_concat_call_no_args.lox  native_fn_arr_concat_call_no_args.lox.err  native_fn_arr_concat_call_too_few_args.lox  native_fn_arr_concat_call_too_few_args.lox.err  native_fn_arr_concat_call_too_many_args.lox  (+243 more)
unit/: token.c  value.c  version.c
vsc/: language-configuration.json  package-lock.json  package.json  snippets.json  tsconfig.json
(+112 files in other folders)
